--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+
+/* Navbar styles */
+.navbar {
+  background-color: #333;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.navbar .nav-link {
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change color on hover */
+.navbar .nav-link:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* About Me Section styles */
+.padding{
+  padding: 2rem;
+  line-height: 1.6;
+}
